<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenPass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="518dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textHint"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbRus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbRus" />

            <CheckBox
                android:id="@+id/cbEng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbEng" />

            <CheckBox
                android:id="@+id/cbNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbNumber" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbUp" />

            <CheckBox
                android:id="@+id/cbLower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbLower" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:text="@string/textLength"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewLength"
                android:textSize="20sp" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar"
            style="@android:style/Widget.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="32"
            android:progress="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btnGenerate" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>